fix: repair prep service contract tests